--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     image: semtech/mu-migrations-service:0.9.0
     volumes:
       - ./config/migrations:/data/migrations
+    labels:
+      - "logging=true"
   delta-notifier:
     image: semtech/mu-delta-notifier:0.4.0
     volumes:
@@ -45,3 +47,23 @@ services:
     volumes:
       - ./data/db:/data
       - ./config/virtuoso/virtuoso.ini:/data/virtuoso.ini
+    labels:
+      - "logging=true"
+  file:
+    image: semtech/mu-file-service:3.4.0
+    links:
+      - database:database
+    volumes:
+      - ./data/files:/share
+    labels:
+      - "logging=true"
+  custom-service:
+    image: semtech/mu-javascript-template
+    environment:
+      NODE_ENV: "development"
+    ports:
+      - 8888:80
+    volumes:
+      - ./services/custom-service/:/app/
+    labels:
+      - "logging=true"
